<resources>
    <string name="app_name">AndroidAppMusic</string>
    <string name="facebook_app_id">616561682831141</string>
    <string name="fb_login_protocol_scheme">fb616561682831141</string>

    <string name="channel_name">MUZIK 1</string>
    <string name="channel_description">MUZIK Play</string>

    <string name="btnLoginFacebook">Login with Facebook</string>
    <string name="btnLoginGoogle">Login with Google</string>
    <string name="toast1">Logged in successfully!</string>
    <string name="toast2">Canceled login</string>
    <string name="toast3">Login failed! Let\'s try again</string>
    <string name="toast4">Please login to continue</string>
    <string name="toast5">Authentication failed</string>
    <string name="toast8">Log in again to continue</string>
    <string name="toast9">Sign out successful!</string>
    <string name="toast10">Let\'s try again</string>
    <string name="toast11">Error! Please try again</string>
    <string name="toast12">Please do not leave it blank</string>
    <string name="toast13">Create playlist successfully</string>
    <string name="toast14">Error! Playlist creation failed. Please try again</string>
    <string name="toast15">The playlist name already exists. Please choose another name</string>
    <string name="toast16">Edit playlist name successfully</string>
    <string name="toast17">Error! Edit playlist name failed. Please try again</string>
    <string name="toast18">The playlist name already exists. Please choose another name</string>
    <string name="toast19">Delete playlist successfully</string>
    <string name="toast20">Error! Deleting the playlist failed. Please try again</string>
    <string name="toast21">Delete song successfully</string>
    <string name="toast22">Error! Delete failed song. Please try again</string>
    <string name="toast23">Add song to playlist successfully</string>
    <string name="toast24">Error! Adding songs to playlist failed. Please try again</string>
    <string name="toast25">This song already exists in the playlist</string>
    <string name="toast26">No connection</string>
    <string name="toast27">Please do not write more than 200 characters or special characters</string>
    <string name="toast28">Commented</string>
    <string name="toast29">Comment removed</string>
    <string name="toast30">Delete comment failed</string>
    <string name="toast31">You need the Youtube app to use it!</string>
    <string name="toast32">This song has no MV</string>
    <string name="toast33">Can not change another language, because the device is out of date!</string>
    <string name="toast34">Please do not write more than 500 characters or special characters</string>
    <string name="toast35">Thanks for your feedback!</string>

    <string name="btnLoginZL">Login with Zalo</string>
    <string name="toast6">Error code:</string>
    <string name="toast7">Press BACK again to exit</string>
    <string name="etHint1">Songs, artists…</string>
    <string name="tvSongName">Name of the song</string>
    <string name="tvArtist">Singer name</string>
    <string name="tvTheme">Theme</string>
    <string name="tvLanguage">Language</string>
    <string name="tvTitleComment">Comment</string>
    <string name="etHintComment">Enter a comment</string>
    <string name="tvContentComment">Comment content</string>
    <string name="tvEmptyComment">No comments yet. \nBe the first to comment</string>
    <string name="tvTimeStart">00:00</string>
    <string name="tvVietNamese">VietNamese</string>
    <string name="tvEnglish">English</string>
    <string name="tvUserCommentName">User</string>
    <string name="tvTimeComment">00/00/0000</string>
    <string name="tvTimeEnd">00:00</string>
    <string name="tvSearchHint">Search results will be showed here.</string>
    <string name="tvPlaylist">Playlist Hot</string>
    <string name="tvThemeFragment">Hot Topics</string>
    <string name="tvAlbum">Album Hot</string>
    <string name="tvAlbumName">Album Name</string>
    <string name="tvAlbumSinger">Singer</string>
    <string name="tvChart">Charts</string>
    <string name="tvChartNumber">0</string>
    <string name="tvChartSongName">Name of the song</string>
    <string name="tvChartSongSinger">Singer name</string>
    <string name="tvLikeNumber">100</string>
    <string name="tvPersonalTitle">Personal information</string>
    <string name="tvPersonalName">User name</string>
    <string name="tvInfoName">Display name:</string>
    <string name="tvYourInfoName">User name</string>
    <string name="tvInfoEmail">Email: </string>
    <string name="tvYourInfoEmail">User email</string>
    <string name="btnLogout">Log out</string>
    <string name="tvDialogTitle">Title</string>
    <string name="tvDialogContent">Content</string>
    <string name="btnDialog1">Cancel</string>
    <string name="btnDialog2">Action</string>
    <string name="tvDialogTitle1">Log out</string>
    <string name="tvDialogContent1">Do you want to sign out?</string>
    <string name="btnDialogCancel1">Cancel</string>
    <string name="btnDialogAction1">Log out</string>
    <string name="tvDialogTitle2">Delete playlist</string>
    <string name="tvDialogContent2">Are you sure you want to delete this playlist?</string>
    <string name="btnDialogCancel2">Cancel</string>
    <string name="btnDialogAction2">Delete</string>
    <string name="tvDialogTitle3">Delete all playlists</string>
    <string name="tvDialogContent3">Are you sure you want to delete all playlists?</string>
    <string name="btnDialogCancel3">Cancel</string>
    <string name="btnDialogAction3">Delete</string>
    <string name="tvDialogTitle4">Delete song</string>
    <string name="tvDialogContent4">Are you sure you want to delete this song?</string>
    <string name="btnDialogCancel4">Cancel</string>
    <string name="btnDialogAction4">Delete</string>
    <string name="tvDialogTitle5">Delete all songs</string>
    <string name="tvDialogContent5">Are you sure you want to delete all songs?</string>
    <string name="btnDialogCancel5">Cancel</string>
    <string name="btnDialogAction5">Delete</string>
    <string name="tvDialogTitle6">Delete comments</string>
    <string name="tvDialogContent6">Are you sure you want to delete this comment?</string>
    <string name="btnDialogCancel6">Cancel</string>
    <string name="btnDialogAction6">Delete</string>
    <string name="tvYourPlaylist">Playlist: </string>
    <string name="tvNumberPlaylist">0</string>
    <string name="tvTitleDownloadSong">Songs on the device</string>
    <string name="tvTitleLoveSong">Favorite song</string>
    <string name="tvNumberSongLove"> </string>
    <string name="tvEmptyPlaylist">There are no playlists yet</string>
    <string name="tvPlaylistName">Playlist name</string>
    <string name="tvDialogTitlePlaylist">Create playlist</string>
    <string name="etDialogContentPlaylist">Playlist name</string>
    <string name="btnDialogCancelPlaylist">Cancel</string>
    <string name="btnDialogActionPlaylist">Create playlist</string>
    <string name="tvDialogTitlePlaylist1">Edit playlist name</string>
    <string name="etDialogContentPlaylist1">Enter new playlist name</string>
    <string name="btnDialogCancelPlaylist1">Cancel</string>
    <string name="btnDialogActionPlaylist1">Save</string>
    <string name="tvPersonalPlaylistTitle">Playlist name</string>
    <string name="tvInfoGender">Gender</string>
    <string name="btnPersonalPlayAll">Play all</string>
    <string name="tvEmptySong">There has been no song yet</string>
    <string name="tvLoading">Wait a minute, hihi....😁</string>
    <string name="tvAddPlaylist">Create a new playlist</string>
    <string name="tvEditPlaylist">Edit current playlist name</string>
    <string name="tvDeletePlaylist">Delete current playlist</string>
    <string name="tvDeleteAllPlaylist">Delete all playlist</string>
    <string name="tvCloseInfoPlaylist">Exit</string>
    <string name="tvPlaySong">Play music</string>
    <string name="tvAddSongToPlaylist">Add songs to playlist</string>
    <string name="tvDeleteSongToPlaylist">Remove this song</string>
    <string name="tvDeleteAllSongToPlaylist">Remove all songs</string>
    <string name="tvDownLoadSong">Download music</string>
    <string name="tvDeleteDownLoadSong">Delete downloaded music</string>
    <string name="tvCloseInfoSong">Exit</string>
    <string name="tvSelectPlaylist">Select playlist</string>
    <string name="tvGenreName">Category name</string>
    <string name="tvTitle">Title</string>
    <string name="hours">h ago</string>
    <string name="minutes">minutes ago</string>
    <string name="days">days ago</string>
    <string name="today">Today</string>
    <string name="tvRadio">Radio</string>
    <string name="tvLyrics">Và giờ anh biết\\nChuyện tình mình chẳng còn gì\\nKhi nắng xuân sang\\nLời mật ngọt còn thầm thì\\nEm bước sang ngang\\nĐợi chờ một điều diệu kì\\nNhư lúc ban đầu\\nVà giờ em khóc\\nThì cũng chẳng để làm gì\\nĐâu phải cho anh\\nChuyện tình mình mà là vì\\nEm đã trao ai\\nDòng lệ tràn đầy cầu kì\\nNhững năm tháng phai nhòa\\nNếu...\\nTrái tim mình nói không nên lời\\nĐắng cay từng tiếng yêu xa vời\\nThế là...\\nVà hôm nay em đến\\nNhưng nắng đâu còn thiết tha gọi mời\\nGió âm thầm lướt qua muôn đời\\nVì ai vì ai\\nVì giờ anh biết\\nChuyện tình mình chẳng còn gì\\nKhi nắng xuân sang\\nLời mật ngọt còn thầm thì\\nEm bước sang ngang\\nĐợi chờ một điều diệu kì\\nNhư lúc ban đầu\\nVà giờ em khóc\\nThì cũng chẳng để làm gì\\nĐâu phải cho anh\\nChuyện tình mình mà là vì\\nEm đã trao ai\\nDòng lệ tràn đầy cầu kì\\nNhững năm tháng phai nhòa\\nNếu...\\nĐóa hoa hồng trước kia trở về\\nNhánh hương tình thoảng trên câu thề\\nAnh ước rằng...\\nRằng một mai anh đến\\nAnh đón em vào sớm mai trong lành\\nNhưng đó mãi là giấc mơ không thành\\nVì ai vì ai\\nVà giờ anh biết\\nChuyện tình mình chẳng còn gì\\nKhi nắng xuân sang\\nLời mật ngọt còn thầm thì\\nEm bước sang ngang\\nĐợi chờ một điều diệu kì\\nNhư lúc ban đầu\\nVà giờ em khóc\\nThì cũng chẳng để làm gì\\nĐâu phải cho anh\\nChuyện tình mình mà là vì\\nEm đã trao ai\\nDòng lệ tràn đầy cầu kì\\nNhững năm tháng phai nhòa\\nVì giờ anh biết\\nChuyện tình mình chẳng còn gì\\nKhi nắng xuân sang\\nLời mật ngọt còn thầm thì\\nEm bước sang ngang\\nĐợi chờ một điều diệu kì\\nNhư lúc ban đầu\\nVà giờ em khóc\\nThì cũng chẳng để làm gì\\nĐâu phải cho anh\\nChuyện tình mình mà là vì\\nNước mắt em rơi\\nDòng lệ tràn đầy cầu kì\\nVì em vì em\\n</string>
    <string name="tvRoom1">Top 10 songs from the chart</string>
    <string name="tvRoom2">20 songs random</string>
    <string name="btnRating">Rate this app</string>
    <string name="tvFeedbackTitle">Rating</string>
    <string name="tvShowStar">4.0</string>
    <string name="etFeedbackContent">Enter feedback</string>
    <string name="btnSendFeedback">Send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_full_player">FullPlayerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    //add_update.xml
    <string name="create_playlist">Create playlist</string>


</resources>