<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/shape_corner_16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvDialogTitle"
        style="@style/tvStyle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_corner_16dp_topleft_topright"
        android:ellipsize="marquee"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:padding="10dp"
        android:scrollHorizontally="true"
        android:text="@string/tvDialogTitle"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvDialogContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/comfortaa"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/tvDialogContent"
            android:textAlignment="center"
            android:textColor="@color/colorLight7"
            android:textSize="18sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDialogCancel"
                style="@style/tvStyle1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:alpha="0.9"
                android:background="@drawable/shape_corner_gradient2_10dp"
                android:gravity="center"
                android:text="@string/btnDialog1"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/btnDialogAction"
                style="@style/tvStyle1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/shape_corner_gradient1_10dp"
                android:gravity="center"
                android:text="@string/btnDialog2"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>