<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/shape_corner_16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvDialogTitlePlaylist"
        style="@style/tvStyle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_corner_16dp_topleft_topright"
        android:ellipsize="marquee"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:padding="10dp"
        android:scrollHorizontally="true"
        android:text="@string/tvDialogTitlePlaylist"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etDialogContentPlaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_corner_10dp_border_1"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/etDialogContentPlaylist"
            android:imeOptions="actionDone"
            android:lines="1"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="12dp"
            android:singleLine="true"
            android:textColor="@color/colorLight9"
            android:textColorHint="@color/colorLight9"
            android:textSize="16sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDialogCancelPlaylist"
                style="@style/tvStyle1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:alpha="0.6"
                android:background="@drawable/shape_corner_gradient2_10dp"
                android:gravity="center"
                android:text="@string/btnDialogCancelPlaylist"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/btnDialogActionPlaylist"
                style="@style/tvStyle1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/shape_corner_gradient1_10dp"
                android:gravity="center"
                android:text="@string/btnDialogActionPlaylist"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>